# SFERA

./: README.md
Calibration/: CMakeLists.txt  First_step.sh  blinking_chessboard_detector.cpp  second_step.sh  step_three_omnicalibration.cpp  step_two_sort.cpp
Calibration/src/: step_one_primitive_detection_recording.cpp  step_three_omnicalibration.cpp
Omnitracking/: CMakeLists.txt
Omnitracking/src/: SFERA_omnitracking.cpp  SFERA_viewer.cpp  angle.hpp  bayesianEstimator.hpp  bayesianFilter.hpp  event2d_id.hpp  event3d.hpp  eventSphere.hpp  tracking_drawing.hpp
